düzenlemeler yapıldı. vercel ile canlıya alınacak
