# src/configs/swagger.json
@@ -514,6 +514,290 @@
           }
         }
       }
+    },
+    "/products/": {
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "List Products",
+        "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r   <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r   <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r   <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r   <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Create Product",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "category": {
+                  "type": "string",
+                  "example": "661aee14a06755ee921e79f4"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "title"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 123
+                },
+                "discountPercentage": {
+                  "type": "number",
+                  "example": 12.96
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 1.23
+                },
+                "stock": {
+                  "type": "number",
+                  "example": 50
+                },
+                "brand": {
+                  "type": "string",
+                  "example": "brand"
+                },
+                "thumbnail": {
+                  "type": "string",
+                  "example": "https://www.thumbnail.com/thumbnail.jpg"
+                },
+                "images": {
+                  "type": "array",
+                  "example": [
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          }
+        }
+      }
+    },
+    "/products/{id}": {
+      "get": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Get Single Product",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Update Product",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "category": {
+                  "type": "string",
+                  "example": "661aee14a06755ee921e79f4"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "title"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 123
+                },
+                "discountPercentage": {
+                  "type": "number",
+                  "example": 12.96
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 1.23
+                },
+                "stock": {
+                  "type": "number",
+                  "example": 50
+                },
+                "brand": {
+                  "type": "string",
+                  "example": "brand"
+                },
+                "thumbnail": {
+                  "type": "string",
+                  "example": "https://www.thumbnail.com/thumbnail.jpg"
+                },
+                "images": {
+                  "type": "array",
+                  "example": [
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Delete Product",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Products"
+        ],
+        "summary": "Update Product",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "category": {
+                  "type": "string",
+                  "example": "661aee14a06755ee921e79f4"
+                },
+                "title": {
+                  "type": "string",
+                  "example": "title"
+                },
+                "description": {
+                  "type": "string",
+                  "example": "description"
+                },
+                "price": {
+                  "type": "number",
+                  "example": 123
+                },
+                "discountPercentage": {
+                  "type": "number",
+                  "example": 12.96
+                },
+                "rating": {
+                  "type": "number",
+                  "example": 1.23
+                },
+                "stock": {
+                  "type": "number",
+                  "example": 50
+                },
+                "brand": {
+                  "type": "string",
+                  "example": "brand"
+                },
+                "thumbnail": {
+                  "type": "string",
+                  "example": "https://www.thumbnail.com/thumbnail.jpg"
+                },
+                "images": {
+                  "type": "array",
+                  "example": [
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg",
+                    "https://www.image.com/image.jpg"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "202": {
+            "description": "Accepted"
+          }
+        }
+      }
     }
   },
   "security": [
